fixed overflow-y issue with show album

--- a/app/assets/stylesheets/playlists/playlists.scss
+++ b/app/assets/stylesheets/playlists/playlists.scss
@@ -8,7 +8,7 @@
         padding: 2em 32px;
         margin: 0 auto;
         max-width: $desktop_width;
-        height: 100%;
+        // height: 100%;
 
         .playlist-info {
             flex-basis: 33%;
